home-cluster/media/transmission/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
  namespace: home-media
spec:
  selector:
    app: transmission
  ports:
    - name: webui
      protocol: TCP
      port: 80
      targetPort: 9091
    - name: torrent-tcp
      protocol: TCP
      port: 51413
      targetPort: 51413
    - name: torrent-udp
      protocol: UDP
      port: 51413
      targetPort: 51413
