home-cluster/media/transmission/service/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
  namespace: home-samba
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`transmission.local.solonsstuff.com`)
      kind: Rule
      services:
        - name: transmission-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-solonsstuff-com-live-tls
